--- a/download/index.html
+++ b/download/index.html
@@ -16,8 +16,8 @@
 		<h3>
 			<span>Introduction: </span>
 			<p>重庆邮电大学2015地图，转载请注明红岩网校工作站。</p>
-			<a class="button" href="download.php">DOWNLOAD</a>
-		</h2>
+			<a class="button" href="res/map.zip">DOWNLOAD</a>
+		</h3>
 	</div>
 </body>
 </html>
