--- a/mobile-dpr/index.html
+++ b/mobile-dpr/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1 ,user-scalable=no">
     <title>mobile-dpr</title>
-    <link rel="stylesheet" href="demo.css">
+    <link rel="stylesheet" href="dist/assets/css/demo.css">
     <script src="rem.js"></script>
 </head>
 <body>
