--- a/tools/index.html
+++ b/tools/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <script src="tools.js"></script>
+    <script src="extend.js"></script>
 </head>
 <body>
     
